clear connection info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.context-path=/spring
 
 #connection
-spring.datasource.url=jdbc:oracle:thin:@10.1.100.1:1521:PO
-spring.datasource.username:xtzl
-spring.datasource.password:xtzl
+spring.datasource.url=
+spring.datasource.username:
+spring.datasource.password:
 
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*/*.xml
