clear generator info

--- a/src/main/resources/generator/config.properties
+++ b/src/main/resources/generator/config.properties
@@ -23,10 +23,10 @@
 #
 
 # connection config
-jdbc.driverClass = oracle.jdbc.OracleDriver
-jdbc.url = jdbc:oracle\:thin\:@10.1.100.1\:1521\:PO
-jdbc.user = xtzl
-jdbc.password =xtzl
+jdbc.driverClass =
+jdbc.url = 
+jdbc.user = 
+jdbc.password =
 
 #c3p0
 jdbc.maxPoolSize=50
