--- a/src/main/resources/generator/config.properties
+++ b/src/main/resources/generator/config.properties
@@ -21,11 +21,12 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 #
+# mvn mybatis-generator:generate
 
 # connection config
 jdbc.driverClass =
-jdbc.url = 
-jdbc.user = 
+jdbc.url =
+jdbc.user =
 jdbc.password =
 
 #c3p0
