--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 #project name
 server.context-path=/spring
+spring.thymeleaf.cache=false
 
 #connection
-spring.datasource.url=
-spring.datasource.username:
-spring.datasource.password:
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/yibai_db
+spring.datasource.username:postgres
+spring.datasource.password:8980580
 
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*/*.xml
 
 #mapper
-#mappers 多个接口时逗号隔开
+#mappers \u591A\u4E2A\u63A5\u53E3\u65F6\u9017\u53F7\u9694\u5F00
 mapper.mappers=tk.mybatis.mapper.common.Mapper
 mapper.not-empty=false
 mapper.identity=ORACLE
