--- a/src/main/resources/generator/config.properties
+++ b/src/main/resources/generator/config.properties
@@ -24,10 +24,10 @@
 # mvn mybatis-generator:generate
 
 # connection config
-jdbc.driverClass =
-jdbc.url =
-jdbc.user =
-jdbc.password =
+jdbc.driverClass =org.postgresql.Driver
+jdbc.url =jdbc:postgresql://127.0.0.1:5432/yibai_db
+jdbc.user = postgres
+jdbc.password = 8980580
 
 #c3p0
 jdbc.maxPoolSize=50
@@ -38,8 +38,8 @@ jdbc.maxStatements=100
 # generate config
 mapper.plugin = tk.mybatis.mapper.generator.MapperPlugin
 mapper.Mapper = tk.mybatis.mapper.common.Mapper
-targetJavaProject=E\:\\workspace\\spring\\src\\main\\java
-targetResourcesProject=E\:\\workspace\\spring\\src\\main\\resources
+targetJavaProject=C:\\Users\\wangchen\\IdeaProjects\\CulturalRelic\\src\\main\\java
+targetResourcesProject=C:\\Users\\wangchen\\IdeaProjects\\CulturalRelic\\src\\main\\resources
 targetModelPackage=com.login.model
 targetMapperPackage=com.login.mapper
 targetXMLPackage=mapper.login
