--- a/src/main/resources/generator/config.properties
+++ b/src/main/resources/generator/config.properties
@@ -27,7 +27,7 @@
 jdbc.driverClass =org.postgresql.Driver
 jdbc.url =jdbc:postgresql://127.0.0.1:5432/yibai_db
 jdbc.user = postgres
-jdbc.password = 8980580
+jdbc.password =
 
 #c3p0
 jdbc.maxPoolSize=50
