上传文件长度

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 server.context-path=/spring
 spring.thymeleaf.cache=false
 
+spring.http.multipart.max-file-size=10Mb
+spring.http.multipart.max-request-size=10Mb
+
 #connection
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/yibai_db
 spring.datasource.username:postgres
